--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,11 @@
     "theme-color": "#3498db",
     "background-color": "#3498db",
     "display": "fullscreen",
-    "orientation": "any"
+    "orientation": "any",
+    "background_color": "",
+    "url": "https://viniciusbertini.github.io/appAulaDS/",
+    "lang": "Portuguese",
+    "screenshots": [],
+    "short_name": "appAulaDS",
+    "description": "Projeto desenvolvido para as aulas de DS e TM."
 }
